# sparse-moe-torch

./: .gitignore  README.md  main.py  pyproject.toml
sparse_moe/: __init__.py  dataset.py  hf_model.py  train.py
